--- a/index.html
+++ b/index.html
@@ -1,11 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link rel="stylesheet" href="style.css" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,300"
+      rel="stylesheet"
+      type="text/css"
+    />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Felix's Personal Site</title>
   </head>
   <body>
-    <h1>TEST</h1>
+    <div id="welcome">
+      <h1 id="center-text" class="test">Sup, I'm Felix Chen</h1>
+    </div>
   </body>
+  <script src="index.js"></script>
 </html>
